...
            app:expandedTitleTextAppearance="@style/TextAppearance.BiliTools.Main.ExpandedTitle"
            app:forceApplySystemWindowInsetTop="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="false"
                app:layout_collapseMode="pin"
                app:titleCentered="false" />

...
