...
            ),
            background = view.resolveThemeColor(android.R.attr.colorBackground, baseScheme.background),
            onBackground = view.resolveThemeColor(
                com.google.android.material.R.attr.colorOnBackground,
                baseScheme.onBackground,
            ),
            surface = view.resolveThemeColor(
                com.google.android.material.R.attr.colorSurface,
                baseScheme.surface,
            ),
            onSurface = view.resolveThemeColor(
                com.google.android.material.R.attr.colorOnSurface,
                baseScheme.onSurface,
...
